k8s/hello-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-world
spec:
  selector:
    matchLabels:
      run: app1
  replicas: 3
  template:
    metadata:
      labels:
        run: app1
    spec:
      containers:
        - name: hello-world
          image: polyverse/node-echo-server
          ports:
            - containerPort: 8080
              protocol: TCP
# kubectl apply -f hello-deployment.yaml
# kubectl expose deployment hello-node --type=NodePort --name=app1-service
