k8s/hello-world-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  generation: 1
  name: hello-world
  namespace: default
  resourceVersion: "1232"
  uid: 393a3d9f-cb2b-4749-9d52-c0d860d9e4d8
spec:
  progressDeadlineSeconds: 600
  replicas: 3
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      run: app1
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        run: app1
    spec:
      containers:
        - image: polyverse/node-echo-server
          imagePullPolicy: Always
          name: hello-world
          ports:
            - containerPort: 8080
              protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
status:
  availableReplicas: 2
  conditions:
    - lastTransitionTime: "2021-07-10T16:18:41Z"
      lastUpdateTime: "2021-07-10T16:18:41Z"
      message: Deployment has minimum availability.
      reason: MinimumReplicasAvailable
      status: "True"
      type: Available
    - lastTransitionTime: "2021-07-10T16:18:38Z"
      lastUpdateTime: "2021-07-10T16:18:41Z"
      message: ReplicaSet "hello-world-6f94fd75cd" has successfully progressed.
      reason: NewReplicaSetAvailable
      status: "True"
      type: Progressing
  observedGeneration: 1
  readyReplicas: 2
  replicas: 2
  updatedReplicas: 2
