k8s/node-hello-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app2-service
spec:
  type: NodePort
  selector:
    run: app2
  ports:
    - port: 8080
      targetPort: 8080
      nodePort: 30002
