k8s/hello-ingress.yaml
# apiVersion: networking.k8s.io/v1beta1 # for k3s < v1.19
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx
                port:
                  number: 80
          - path: /foo
            pathType: Prefix
            backend:
              service:
                name: hello-world-service
                port:
                  number: 8080
          - path: /node-hello
            pathType: Prefix
            backend:
              service:
                name: app2-service
                port:
                  number: 8080
